[package]
name = "aps490_mini"
version = "0.2.0"
description = "FSM for saw MCU"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/cam-rod/aps490_mini"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.1.2"
embedded-hal = "1.0.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl", "defmt"] }
rp2040-boot2 = "0.3"

[features]
default = ["multi_status"]
# Controls three separate status LEDs
multi_status = []
# Controls a single, common-anode RGB LED
rgba_status = []
# Enables trace messages for all averages
trace_avg_samples = []
# Enables trace messages for every averaged sample
trace_indiv_samples= []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
