[package]
name = "aps490_pfpu2_mini"
version = "0.3.0"
authors = ["Cameron Rodriguez <dev@camrod.me", "PFPU2 team (Zainab Ali, Olivia Lotzer, Cameron Rodriguez, Tina Sokhanvar, Zeynep Tibik)"]
categories = ["embedded", "no-std", "science"]
description = "Control software for PFPU2 automated brain detection system"
documentation = "https://docs.rs/aps490_pfpu2_mini"
edition = "2021"
keywords = ["capstone", "RP2040", "autopsy", "brain", "contact-detection"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cam-rod/aps490_pfpu2_mini"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = "1.1.2"
embedded-hal = "1.0.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl", "defmt"] }
rp2040-boot2 = "0.3"
log = "0.4.21"


[features]
default = ["triple_status"]
# Controls a single, common-anode RGB LED
rgba_status = []
# Controls three separate status LEDs
triple_status = []
# Enables disable switch functionality
disable_switch = []

# Enables trace messages for all averages
trace_avg_samples = []
# Enables trace messages for every averaged sample
trace_indiv_samples = []

[[bin]]
name = "aps490_pfpu2_mini"
bench = false
test = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[lints.clippy]
missing_docs_in_private_items = "warn"

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
